Closes #498 - C7 Health-Check builds wrong URL (#500)
* determine base-url and handle multiple named engine identifiers

* report actual url not configured system-rest-url on failure

* int-test health for engine-scoped c7 config

* use engine-identifier for health when exists

* replace `.collect(Collectors.toList())` with `.toList()` to appease SonarQube

* address review

* single engine on success, all on failure